[gd_scene load_steps=10 format=3 uid="uid://bav7gmb8hxktr"]

[ext_resource type="Script" path="res://SwordFight2/SwordFightUI.gd" id="1_6xr1k"]
[ext_resource type="Texture2D" uid="uid://cxb8cobhnc1ek" path="res://SwordFight2/assets/statsbackground.png" id="2_mw4hu"]
[ext_resource type="FontFile" uid="uid://dvy302iubs8kw" path="res://SwordFight2/assets/font.ttf" id="3_kwlq0"]
[ext_resource type="Theme" uid="uid://7kggovvi0fa3" path="res://SwordFight2/assets/new_theme.tres" id="4_73g1r"]
[ext_resource type="Texture2D" uid="uid://bksw48vm7q6ik" path="res://SwordFight2/assets/healthbackground.png" id="5_7yn5b"]
[ext_resource type="Texture2D" uid="uid://c1mjnn4x0x33h" path="res://SwordFight2/assets/actionbarbackground.png" id="5_cfwle"]
[ext_resource type="Texture2D" uid="uid://dkddgti2uwom7" path="res://SwordFight2/assets/button.png" id="6_5qlri"]
[ext_resource type="Texture2D" uid="uid://cdfhensy3sdr6" path="res://SwordFight2/assets/emptyhealth.png" id="6_li8bd"]
[ext_resource type="Texture2D" uid="uid://bgdhn04q6wq01" path="res://SwordFight2/assets/health.png" id="7_56g8o"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_6xr1k")

[node name="PlayerStats" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -74.0
offset_right = 16.0
offset_bottom = 74.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_mw4hu")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerStats"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 116.0
offset_bottom = 140.0
tooltip_text = "
"
mouse_filter = 2
alignment = 1

[node name="Level" type="Label" parent="PlayerStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")
text = "Level: 100"

[node name="HP" type="Label" parent="PlayerStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.996078, 0.941176, 1)
theme_override_fonts/font = ExtResource("3_kwlq0")
theme_override_font_sizes/font_size = 11

[node name="Stamina" type="Label" parent="PlayerStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")

[node name="Strength" type="Label" parent="PlayerStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")

[node name="Speed" type="Label" parent="PlayerStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")

[node name="Defense" type="Label" parent="PlayerStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")

[node name="TextureButton" type="TextureButton" parent="PlayerStats"]
layout_mode = 0
offset_left = 120.0
offset_top = 52.0
offset_right = 136.0
offset_bottom = 96.0
toggle_mode = true

[node name="EnemyStats" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -74.0
offset_right = 120.0
offset_bottom = 74.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_mw4hu")
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyStats"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 140.0
tooltip_text = "
"
mouse_filter = 2
alignment = 1

[node name="Level" type="Label" parent="EnemyStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")
text = "Level: 100"

[node name="HP" type="Label" parent="EnemyStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.996078, 0.941176, 1)
theme_override_fonts/font = ExtResource("3_kwlq0")
theme_override_font_sizes/font_size = 11

[node name="Stamina" type="Label" parent="EnemyStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")

[node name="Strength" type="Label" parent="EnemyStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")

[node name="Speed" type="Label" parent="EnemyStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")

[node name="Defense" type="Label" parent="EnemyStats/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_73g1r")

[node name="TextureButton" type="TextureButton" parent="EnemyStats"]
layout_mode = 0
offset_top = 52.0
offset_right = 16.0
offset_bottom = 96.0
toggle_mode = true

[node name="HealthBar" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_right = 144.0
offset_bottom = 52.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("5_7yn5b")

[node name="PlayerHealth" type="TextureProgressBar" parent="HealthBar"]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 116.0
offset_bottom = 24.0
mouse_filter = 2
value = 100.0
fill_mode = 1
texture_under = ExtResource("6_li8bd")
texture_progress = ExtResource("7_56g8o")

[node name="EnemyHealth" type="TextureProgressBar" parent="HealthBar"]
layout_mode = 0
offset_left = 172.0
offset_top = 4.0
offset_right = 280.0
offset_bottom = 24.0
mouse_filter = 2
value = 100.0
fill_mode = 1
texture_under = ExtResource("6_li8bd")
texture_progress = ExtResource("7_56g8o")

[node name="ActionBar" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -116.0
offset_top = -60.0
offset_right = 116.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("5_cfwle")

[node name="AttackActions" type="Control" parent="ActionBar"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Attack1" type="TextureButton" parent="ActionBar/AttackActions"]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 60.0
offset_bottom = 32.0
texture_normal = ExtResource("6_5qlri")

[node name="Label" type="Label" parent="ActionBar/AttackActions/Attack1"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 20.0
theme = ExtResource("4_73g1r")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Attack2" type="TextureButton" parent="ActionBar/AttackActions"]
layout_mode = 2
offset_left = 64.0
offset_top = 12.0
offset_right = 112.0
offset_bottom = 32.0
texture_normal = ExtResource("6_5qlri")

[node name="Label" type="Label" parent="ActionBar/AttackActions/Attack2"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 20.0
theme = ExtResource("4_73g1r")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Attack3" type="TextureButton" parent="ActionBar/AttackActions"]
layout_mode = 2
offset_left = 12.0
offset_top = 36.0
offset_right = 60.0
offset_bottom = 56.0
texture_normal = ExtResource("6_5qlri")

[node name="Label" type="Label" parent="ActionBar/AttackActions/Attack3"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 20.0
theme = ExtResource("4_73g1r")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Attack4" type="TextureButton" parent="ActionBar/AttackActions"]
layout_mode = 2
offset_left = 64.0
offset_top = 36.0
offset_right = 112.0
offset_bottom = 56.0
texture_normal = ExtResource("6_5qlri")

[node name="Label" type="Label" parent="ActionBar/AttackActions/Attack4"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 20.0
theme = ExtResource("4_73g1r")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ExtraActions" type="Control" parent="ActionBar"]
anchors_preset = 0
offset_right = 112.0
offset_bottom = 56.0
mouse_filter = 2

[node name="Crew" type="TextureButton" parent="ActionBar/ExtraActions"]
layout_mode = 2
offset_left = 120.0
offset_top = 12.0
offset_right = 168.0
offset_bottom = 32.0
texture_normal = ExtResource("6_5qlri")

[node name="Label" type="Label" parent="ActionBar/ExtraActions/Crew"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 20.0
theme = ExtResource("4_73g1r")
text = "Crew"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Flee" type="TextureButton" parent="ActionBar/ExtraActions"]
layout_mode = 2
offset_left = 172.0
offset_top = 12.0
offset_right = 220.0
offset_bottom = 32.0
texture_normal = ExtResource("6_5qlri")

[node name="Label" type="Label" parent="ActionBar/ExtraActions/Flee"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 20.0
theme = ExtResource("4_73g1r")
text = "Flee"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Items" type="TextureButton" parent="ActionBar/ExtraActions"]
layout_mode = 2
offset_left = 120.0
offset_top = 36.0
offset_right = 168.0
offset_bottom = 56.0
texture_normal = ExtResource("6_5qlri")

[node name="Label" type="Label" parent="ActionBar/ExtraActions/Items"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 20.0
theme = ExtResource("4_73g1r")
text = "Items"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BattleLog" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -376.0
offset_right = 376.0
offset_bottom = 455.0
grow_horizontal = 2
bbcode_enabled = true
